KAlarm Change Log

=== Version 2.13.0 (KDE Applications 19.12) --- 19 November 2019 ===
+ Fix user not always being prompted to update new resource if in old format.
+ Terminate application after executing 'kalarm --list'.
+ Fix alarm type column being too wide in alarm template list.
+ Fix failure to display image when alarm is configured to display an image file.
+ Refactor to use generic resource classes.

=== Version 2.12.8 (KDE Applications 19.08.3) --- 16 October 2019 ===
+ Fix error on redo of an active alarm deletion.
+ Archive repeat-at-login alarms if previously triggered, when they are deleted.
+ Fix layout of defer alarm dialogue.
+ Make user settings changes take effect immediately (fixes regression introduced in 2.10.11).

=== Version 2.12.7 (KDE Applications 19.08.2) --- 7 October 2019 ===
+ Show correct read-only status of an alarm in its context menu.
+ Fix errors deleting and reactivating alarms (regression introduced in 2.12.5).
+ Fix error on undo of an active alarm deletion.
+ Don't trigger repeat-at-login alarms when they are edited or imported.

=== Version 2.12.6 (KDE Applications 19.08.1) --- 26 August 2019 ===
+ Fix crash sometimes when a resource is enabled [KDE Bug 410596]
+ Fix D-Bus alarm creation failing if time zone is omitted from start time [KDE Bug 411296]
+ Fix command line options which don't work if KAlarm not already running:
    --edit, --list, --triggerEvent, --cancelEvent.

=== Version 2.12.5 (KDE Applications 19.08) --- 26 July 2019 ===
+ Enable alarm list columns to be hidden using context menu on list header [KDE Bug 397093]
+ Fix regression introduced in version 2.12.0:
    Show time zone abbreviation in message window if alarm time has non-local time zone.
+ If only one writable archived alarm calendar exists, automatically set it as the default.
+ Don't allow user to create a new resource using same calendar file as an existing resource.